增加 GCLogAnalysis分析